Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6486

ppc64 client: lov: Unknown symbol lustre_swab_lov_mds_md

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.8.0
    • None
    • shadow
    • 3
    • 9223372036854775807

    Description

      ppc64 client build can't mount Lustre FS. Error happened during lustre-initialization - phase testing build #66 of Jenkins job 'lustre-ppc-6.6':

      Apr 22 14:09:29 shadow-31 kernel: lov: Unknown symbol lustre_swab_lov_mds_md
      

      Test session associated with build is
      https://testing.hpdd.intel.com/test_sessions/ae0a97f6-e902-11e4-acb0-5254006e85c2
      (see autotest log file, dmesg, messages of node shadow-31)

      Error can be reproduced manually also. Created MGS/MDT on shadow-35vm3, OSTs on shadow-35vm8 and tried to mount Lustre FS on ppc64 client (shadow-31):

      mount -t lustre 10.1.5.185@tcp0:/temp /mnt/lustre
      
      Apr 23 11:34:51 shadow-31 modprobe: FATAL: Error inserting lustre (/lib/modules/2.6.32-504.12.2.el6.ppc64/extra/kernel/fs/lustre/lustre.ko): Unknown symbol in module, or unknown parameter (see dmesg)
      Apr 23 11:34:51 shadow-31 kernel: lov: Unknown symbol lustre_swab_lov_mds_md
      Apr 23 11:34:51 shadow-31 kernel: LustreError: 165-2: Nothing registered for client mount! Is the 'lustre' module loaded?
      Apr 23 11:34:51 shadow-31 kernel: LustreError: 26855:0:(obd_mount.c:1342:lustre_fill_super()) Unable to mount  (-19)
      

      Lustre FS is operational as it can be mounted on x86_64 client node

      [root@shadow-35vm5 ~]# mount -t lustre 10.1.5.185@tcp0:/temp /mnt/lustre
      [root@shadow-35vm5 ~]# mount |grep lustre 
      10.1.5.185@tcp0:/temp on /mnt/lustre type lustre (rw)
      

      Attachments

        Activity

          People

            yujian Jian Yu
            heckes Frank Heckes (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: